uhppoted/REST: implements get-time
