# src/uhppoted/rest/find_devices.go
@@ -2,29 +2,16 @@ package rest
 
 import (
 	"context"
-	"encoding/json"
 	"fmt"
 	"net"
 	"net/http"
-	"regexp"
-	"strconv"
 	"uhppote"
 	"uhppote/types"
 )
 
-type Device struct {
+type device struct {
 	SerialNumber types.SerialNumber `json:"serial-number"`
 	DeviceType   string             `json:"device-type"`
-	IpAddress    net.IP             `json:"ip-address"`
-	SubnetMask   net.IP             `json:"subnet-mask"`
-	Gateway      net.IP             `json:"gateway-address"`
-	MacAddress   types.MacAddress   `json:"mac-address"`
-	Version      types.Version      `json:"version"`
-	Date         types.Date         `json:"date"`
-}
-
-type DeviceList struct {
-	Devices []Device `json:"devices"`
 }
 
 func getDevices(ctx context.Context, w http.ResponseWriter, r *http.Request) {
@@ -35,35 +22,25 @@ func getDevices(ctx context.Context, w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	list := make([]Device, 0)
+	list := make([]device, 0)
 	for _, d := range devices {
-		list = append(list, Device{
+		list = append(list, device{
 			SerialNumber: d.SerialNumber,
 			DeviceType:   "UTO311-L04",
-			IpAddress:    d.IpAddress,
-			SubnetMask:   d.SubnetMask,
-			Gateway:      d.Gateway,
-			MacAddress:   d.MacAddress,
-			Version:      d.Version,
-			Date:         d.Date,
 		})
 	}
 
-	response := DeviceList{list}
-	b, err := json.Marshal(response)
-	if err != nil {
-		http.Error(w, "Error generating response", http.StatusInternalServerError)
-		return
+	response := struct {
+		Devices []device `json:"devices"`
+	}{
+		Devices: list,
 	}
 
-	w.Header().Set("Content-Type", "application/json")
-	w.Write(b)
+	reply(ctx, w, response)
 }
 
 func getDevice(ctx context.Context, w http.ResponseWriter, r *http.Request) {
-	url := r.URL.Path
-	matches := regexp.MustCompile("^/uhppote/device/([0-9]+)$").FindStringSubmatch(url)
-	deviceId, err := strconv.ParseUint(matches[1], 10, 32)
+	deviceId, err := parse(r)
 	if err != nil {
 		http.Error(w, "Error reading request", http.StatusInternalServerError)
 		return
@@ -78,7 +55,16 @@ func getDevice(ctx context.Context, w http.ResponseWriter, r *http.Request) {
 
 	for _, d := range devices {
 		if d.SerialNumber == types.SerialNumber(deviceId) {
-			response := Device{
+			response := struct {
+				SerialNumber types.SerialNumber `json:"serial-number"`
+				DeviceType   string             `json:"device-type"`
+				IpAddress    net.IP             `json:"ip-address"`
+				SubnetMask   net.IP             `json:"subnet-mask"`
+				Gateway      net.IP             `json:"gateway-address"`
+				MacAddress   types.MacAddress   `json:"mac-address"`
+				Version      types.Version      `json:"version"`
+				Date         types.Date         `json:"date"`
+			}{
 				SerialNumber: d.SerialNumber,
 				DeviceType:   "UTO311-L04",
 				IpAddress:    d.IpAddress,
@@ -89,14 +75,7 @@ func getDevice(ctx context.Context, w http.ResponseWriter, r *http.Request) {
 				Date:         d.Date,
 			}
 
-			b, err := json.Marshal(response)
-			if err != nil {
-				http.Error(w, "Error generating response", http.StatusInternalServerError)
-				return
-			}
-
-			w.Header().Set("Content-Type", "application/json")
-			w.Write(b)
+			reply(ctx, w, response)
 			return
 		}
 	}
